# bos-algo

./: .editorconfig  .gitignore  CHANGELOG.md  CI_STATUS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  codecov.yml  rustfmt.toml  tarpaulin.toml
.cargo/: audit.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: distribution.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_distribution.rs  fuzz_edge_cases.rs
src/: lib.rs
tests/: distribution.rs
