[package]
name          = "bos-algo"
version       = "0.1.0"
edition       = "2024"
license       = "MIT"
repository    = "https://github.com/Beer-of-Satoshi-GmbH/bos-algo"
readme        = "README.md"
keywords      = ["bitcoin", "satoshi", "random", "promotion"]
categories    = ["algorithms", "finance"]

[dependencies]
rand = "0.9.1"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
proptest = { version = "1.4", default-features = false, features = ["std"] }
criterion = "0.5"

[[bench]]
name = "distribution"
harness = false
