[package]
name          = "bos-algo"
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.77.0"
license       = "MIT"
repository    = "https://github.com/Beer-of-Satoshi-GmbH/bos-algo"
readme        = "README.md"
keywords      = ["bitcoin", "satoshi", "random", "promotion"]
categories    = ["algorithms", "finance"]

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
proptest = { version = "1.5.0", default-features = false, features = ["std"] }
criterion = "0.5.1"

[[bench]]
name = "distribution"
harness = false
